<resources>
    <!-- Strings related to login -->
    <string name="app_name">Żółw+</string>
    <string name="prompt_email">Nazwa użytkownika</string>
    <string name="prompt_password">Hasło</string>
    <string name="action_sign_in">Zaloguj się</string>
    <string name="action_sign_in_short">Zaloguj się</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="nav_header_title">Żółw+</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="back">Wróć</string>
    <string name="alert_title_text">Alerty</string>
    <string name="no_alerts">Brak alertów</string>
    <string name="send_data_error_msg">Coś poszło nie tak. Kod błędu: </string>
    <string name="invalid_username">Podaj nazwę użytkownika</string>
    <string name="invalid_password">Podaj hasło</string>
    <string name="invalid_password_short">Hasło musi posiadać minimum 5 znaków</string>
    <string name="correct_logout">Do zobaczenia</string>

    <!-- URI -->
    <string name="base_url">https://zolwik.tk</string>

    <!-- menu-->
    <string name="menu_home">Strona główna</string>
    <string name="water_parameters">Parametry wody</string>
    <string name="other">Inne parametry</string>
    <string name="food">Pokarm</string>
    <string name="water">Water</string>
    <string name="maintenance">Utrzymanie</string>
    <string name="logout">Wylogowanie</string>

    <string name="title">Smartarium</string>

    <string name="lack_of_data">Brak danych</string>
    <string name="data_to_send">Dane do wysłania</string>
    <string name="clean">Wyczyść</string>
    <string name="send">Wyślij</string>

    <!-- maintenance possible values -->
    <string name="text_maintenance">Utrzymanie</string>
    <string-array name="maintenance_main_strings">
        <item>Światło</item>
        <!--<item>Przerwa techniczna</item>-->
        <item>Wróć</item>
    </string-array>

    <!-- Light fragment-->
    <string name="light_hint">godzina</string>
    <string name="light_on">Zawsze włączone</string>
    <string name="light_conditional">Zawsze wyłączone</string>
    <string name="from">od</string>
    <string name="to">do</string>

    <string-array name="light_ans_values">
        <item>Zawsze włączone od</item>
        <item>Zawsze włączone do</item>
        <item>Zawsze wyłączone od</item>
        <item>Zawsze wyłączone do</item>
    </string-array>

    <string-array name="light_keys_values">
        <item>light_on_since</item>
        <item>light_on_to</item>
        <item>light_off_since</item>
        <item>light_off_to</item>
    </string-array>

    <!-- Maintenance fragment -->
    <string-array name="maintenance_ans_values">
        <item>Przerwa techniczna od</item>
        <item>Przerwa techniczna do</item>
    </string-array>

    <!-- other possible values -->
    <string name="text_other">Inne parametry</string>
    <string-array name="other_main_strings">
        <item>Filtr</item>
        <item>Waga</item>
        <item>Woda</item>
        <item>Żarówka</item>
        <item>Wróć</item>
    </string-array>

    <!-- Filtr fragment-->
    <string name="cleaning">Czyszczenie</string>

    <string-array name="filter_strings">
        <item>Czyszcenie</item>
        <item>Wymiana</item>
        <item>Gąbka</item>
        <item>Wata</item>
        <item>Żwir</item>
        <item>Ceramika</item>
    </string-array>

    <!-- Weight fragment-->
    <string name="matilda">Matylda</string>
    <string name="stefanie">Stefania</string>
    <string name="matilda_key">mass_M</string>
    <string name="stefanie_key">mass_S</string>
    <string name="weight_hint">Waga w gramach</string>

    <!-- Water fragment-->
    <string name="water_title">Woda</string>
    <string name="change">Wymiana</string>
    <string name="refill">Dolanie</string>
    <string name="water_hint">Ilość wody w litrach</string>

    <!-- Bulb fragment-->
    <string-array name="bulb_strings">
        <item>Wymiana</item>
        <item>Wróć</item>
    </string-array>

    <!-- Food possible values -->
    <string name="food_text">Pokarm</string>

    <string-array name="food_main_strings">
        <item>Suchy</item>
        <item>Mrożony</item>
        <item>Inny</item>
        <item>Wróć</item>
    </string-array>

    <string-array name="food_dry_strings">
        <item>Suszone krewetki</item>
        <item>Suszone stynki</item>
        <item>Gotowy pokarm suchy</item>
        <item>"Wróć</item>
    </string-array>

    <string-array name="food_frozen_strings">
        <item>Mrożone krewetki</item>
        <item>Mrożone stynki</item>
        <item>"Wróć</item>
    </string-array>

    <string-array name="food_other_strings">
        <item>Żywe rybki</item>
        <item>Martwe rybki</item>
        <item>Moczarka</item>
        <item>Inny</item>
        <item>"Wróć</item>
    </string-array>

    <string-array name="food_zabbix_name">
        <item>Żywe rybki</item>
        <item>Martwe rybki</item>
        <item>Mrożone stynki</item>
        <item>Mrożone krewetki</item>
        <item>Suszone stynki</item>
        <item>Suszone krewetki</item>
        <item>Gotowy pokarm suchy</item>
        <item>Moczarka</item>
        <item>Inny</item>
    </string-array>

    <!-- water nav-->
    <string name="water_string">Parametry wody</string>
    <string name="NO2">NO2 Azotyny</string>
    <string name="NO3">NO3 Azotany</string>
    <string name="pH">pH</string>
    <string name="Cl">Cl</string>
    <string name="GH">Twardosc wody</string>
    <string name="KH">Stabilnosc pH</string>

    <!-- water parameters values-->
    <string-array name="water_param_strings">
        <item>"NO3 - Azotany"</item>
        <item>"NO2 - Azotyny"</item>
        <item>"Twardosc calkowita(GH)"</item>
        <item>"Stabilnosc pH(KH)"</item>
        <item>"Kwasowosc pH"</item>
        <item>"Chlor"</item>
        <item>"Wróć</item>
    </string-array>

    <string-array name="water_param_strings_zabbix_items">
        <item>"NO3"</item>
        <item>"NO2"</item>
        <item>"GH"</item>
        <item>"KH"</item>
        <item>"pH"</item>
        <item>"Cl"</item>
    </string-array>

    <string-array name="water_param_values_NO3">
        <item>"0"</item>
        <item>"10"</item>
        <item>"25"</item>
        <item>"50"</item>
        <item>"100"</item>
        <item>"250"</item>
        <item>"500"</item>
        <item>"Wróć</item>
    </string-array>

    <string-array name="water_param_values_NO2">
        <item>"0"</item>
        <item>"0.5"</item>
        <item>"2"</item>
        <item>"5"</item>
        <item>"10"</item>
        <item>"Wróć</item>
    </string-array>

    <string-array name="water_param_values_GH">
        <item>"3"</item>
        <item>"4"</item>
        <item>"7"</item>
        <item>"14"</item>
        <item>"21"</item>
        <item>"Wróć</item>
    </string-array>

    <string-array name="water_param_values_KH">
        <item>"0"</item>
        <item>"3"</item>
        <item>"6"</item>
        <item>"10"</item>
        <item>"15"</item>
        <item>"20"</item>
        <item>"Wróć</item>
    </string-array>

    <string-array name="water_param_values_pH">
        <item>"6.4"</item>
        <item>"6.8"</item>
        <item>"7.2"</item>
        <item>"7.6"</item>
        <item>"8"</item>
        <item>"8.4"</item>
        <item>"9"</item>
        <item>"Wróć</item>
    </string-array>

    <string-array name="water_param_values_Cl">
        <item>"0"</item>
        <item>"0.8"</item>
        <item>"1.5"</item>
        <item>"3.0"</item>
        <item>"Wróć</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
