...
        android:layout_height="wrap_content"
        android:text=""
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="parent" />
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
...
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        tools:layout_editor_absoluteX="8dp">


        <Button
            android:id="@+id/bt_GH_3"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_width="70dp"
            android:layout_height="500dp"
            android:layout_centerVertical="true"
            android:background="@color/GH_3_1"
...
