...
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ocean"
        android:orientation="vertical">
        <ScrollView
            android:id="@+id/send_values_display"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:fillViewport="true"
            tools:ignore="MissingConstraints">
            <LinearLayout
...
                    android:layout_marginBottom="10dp"
                    android:text=""
                    android:textAlignment="center"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/bt_clean"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/clean"
                    android:background="@color/water_5"/>
...
